spec/testdata/rust_snapshots/term__same_ranges__rich_no_color.golden
error: Unexpected token
  ┌─ same_range:1:5
  │
1 │ ::S { }
  │     ^
  │     │
  │     Unexpected '{'
  │     Expected '('

